@@ -81,6 +81,7 @@ option "uamuiport"    - "TCP port to bind to for UAM UI requests" int default="3
 option "uamallowed"   - "Domain names exempt from access check " string no multiple
 option "uamanydns"    - "Allow client to use any DNS server" flag   off
 option "uamanyip"     - "Allow client to use any IP Address" flag   off
+option "wisprlogin"   - "A specific WISPr login url to be used" string no
 option "nouamsuccess" - "Do not return to the UAM server on success, original url instead" flag  off
 option "nouamwispr"   - "Do not send WISPr XML from ChilliSpot, assume back-end does" flag  off
 option "uamlogoutip"  - "HTTP Auto-Logout IP Address" string default="1.1.1.1" no
