@@ -86,5 +86,9 @@
 <span id="errorMessage">Error</span>
 </div>
 </div>
+<div id="debugPage" style="display:inline;">
+<textarea id="debugarea" rows="20" cols="60">
+</textarea>
+</div>
 </div>
 
